# fewshot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fewshot/: cli.py
